# AndroidPostgresSQL

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ti/ble/testsql/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/postgres/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ti/ble/testsql/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libpostgres/: build.gradle.kts
libpostgres/src/androidTest/java/com/lib/libpostgres/: ExampleInstrumentedTest.java
libpostgres/src/main/java/com/lib/libpostgres/: Postgres.java
libpostgres/src/main/res/values/: strings.xml
libpostgres/src/main/rust/postgres/: Cargo.toml  build.cmd
libpostgres/src/main/rust/postgres/.cargo/: config
libpostgres/src/main/rust/postgres/src/: lib.rs  pq_utils.rs
libpostgres/src/test/java/com/lib/libpostgres/: ExampleUnitTest.java
