[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[lib]
name = "postgres"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1", "array-impls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.3"

[profile.release]
opt-level = "z"
codegen-units = 1